--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "web-server",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,5 +10,15 @@
   "dependencies": {
     "express": "^4.16.0",
     "hbs": "^4.0.0"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Sudhir020386/node-web-server.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Sudhir020386/node-web-server/issues"
+  },
+  "homepage": "https://github.com/Sudhir020386/node-web-server#readme",
+  "description": ""
 }
